--- a/app/less/forms.less
+++ b/app/less/forms.less
@@ -44,6 +44,10 @@ div.-inline {
   text-align: left;
   color: #202438;
 
+  &[disabled]{
+    background-color: rgba(32, 36, 56, 0.05);
+  }
+
   &-price {
     margin-bottom: 8px;
   }
